Import of GNG/File-Log-1.05 from CPAN.
gitpan-cpan-distribution: File-Log
gitpan-cpan-version:      1.05
gitpan-cpan-path:         GNG/File-Log-1.05.tar.gz
gitpan-cpan-author:       GNG
gitpan-cpan-maturity:     released

--- a/Log.html
+++ b/Log.html
@@ -359,13 +359,16 @@ the same terms as Perl itself.</p>
 </p>
 <hr />
 <h1><a name="cvs_id">CVS ID</a></h1>
-<p>$Id: Log.pm,v 1.4 2008/02/26 08:54:31 Greg Exp $</p>
+<p>$Id: Log.pm,v 1.5 2008/03/01 02:56:01 Greg Exp $</p>
 <p>
 </p>
 <hr />
 <h1><a name="change_history">CHANGE HISTORY</a></h1>
 <pre>
  $Log: Log.pm,v $
+ Revision 1.5  2008/03/01 02:56:01  Greg
+ - Updated Makefile.PL to include prereq for Encode as I was getting cpan tester errors. NO CODE CHANGES</pre>
+<pre>
  Revision 1.4  2008/02/26 08:54:31  Greg
  - Updated POD</pre>
 <pre>
